--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "vue": "^2.5.7"
     },
     "dependencies": {
-        "@fortawesome/fontawesome-free": "^5.1.0"
+        "@fortawesome/fontawesome-free": "^5.1.0",
+        "mdbootstrap": "^4.5.6"
     }
 }
