--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "infyomlabs/adminlte-templates": "5.6.x-dev",
         "infyomlabs/swagger-generator": "dev-master",
         "jlapp/swaggervel": "dev-master",
-        "doctrine/dbal": "~2.3"
+        "doctrine/dbal": "~2.3",
+        "michael/laravelpagseguro": "dev-master"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
